[ALLI-2400] removed scroll bar bug in result header, added word wrap for long search term

--- a/web/interface/themes/ndl/css/default.css
+++ b/web/interface/themes/ndl/css/default.css
@@ -2908,7 +2908,7 @@ ul.recordSet .addToFavLink a {
 }
 
 .resultTerms .content {
-    overflow:auto;
+    word-wrap:break-word;
 }
 .searchTerms {
     float: left;
